--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title="What is Zeaiter?">
+</head>
+
 <body>
-<h1>Hello World</h1>
-<p>Test</p>
+<h1 align="middle">Zeaiter</p>
+
+
+
 </body>
+
 </html>
