--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
-<!DOCTYPE html>
+<! DOCTYPE html>
 <html>
 <head>
 <title="What is Zeaiter?">
+<link rel="stylesheet" type="text/css" href="main.css">
 </head>
-
 <body>
+
+<div class="main">
 <h1 align="middle">Zeaiter</p>
 
 
-
+</div>
 </body>
 
 </html>
